--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             </div>
                             <div class="blurb-content col-sm-8">
                                 <h3>SIGNALS</h3>
-                                <p>EVERY CRYPTO I BUY WILL BE POSTED FOR YOU TO JOIN AS WELL! 50X POTENTIAL RETURNS! </p>
+                                <p>EVERY CRYPTO I BUY WILL BE POSTED FOR YOU TO JOIN AS WELL!</p>
                             </div>
                         </div>
                         <div class="blurb row">
