Update disclaimer text

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="fluid-container disclaimer-wrapper">
             <div class="container disclaimer-section">
                 <div class="center">
-                    <p class="disclaimer-p">*DISCLAIMER: MAMBA CRYPTO COMMUNITY TEAM ARE NOT FINANCIAL ADVISORS. THE CHAT IS TO GIVE YOU POTENTIAL TRADING OPPORUTINIES, AND COMMUNITY. WE ARE NOT RESPONSIBLE FOR ANY TRADES YOU CHOOSE TO TAKE WITH US*</p>
+                    <p class="disclaimer-p">*DISCLAIMER: THE MAMBA CRYPTO COMMUNITY TEAM ARE NOT FINANCIAL ADVISORS. THE CHAT IS TO TALK ABOUT POTENTIAL TRADING OPPORUTINIES, AND CONNECT WITH OTHER MEMBERS OF THE COMMUNITY. WE ARE NOT RESPONSIBLE FOR ANY FINANCIAL DECISIONS YOU CHOOSE TO MAKE*</p>
                 </div>
             </div>
         </div>
